	mlock-memory.

2007-12-15 Shlomi Fish <shlomif@iglu.org.il>
	* Tagged and released gringotts-1.2.9pre3

2008-01-04 Shlomi Fish <shlomif@iglu.org.il>
	* Applied a patch from wwp to remember the main window size
	between invocations.
	* Fixed "configure.ac" (and by implication - "configure") to require
	gtk+ version 2.12.0 and above, to avoid compilation problems with
	older and incompatible gtk+'s.
	* Tagged and released gringotts-1.2.9pre4

2008-01-25 Shlomi Fish <shlomif@iglu.org.il>
	* Tagged and released gringotts-1.2.9. (With no significant changes 
	since gringotts-1.2.9pre4).

	----------------------------------
	--- Changes from release 1.2.9 ---
	----------------------------------

	* Few fixes in the ask password and define password dialogs:
	* change button order to be HIG compliant (GNOME, XFce and others)
	* fix behaviour of dialogs when pressing Esc by watching the right	
		gtk_dialog response type
	* fix few logics issues when asking for password and not checking
		if the dialog has been cancelled
	* fix possible mis-initialization of exit flag in loop
	* fix a warning (res defined but not used)

	* In some other dialogs that use gtk_dialog:
		- make button order HIG compliant
		- fix scope of few variables

	* Thanks to wwp for the patch.

	* Fix for the prefs, so that file-save dirty flag is set only when 
	appropriate (when file format options has changed and been applied).
	(thanks to wwp for the patch.)

	* Applied a patch from wwp that enforces the parsing of prefs 
	(when loading), and makes it a real tag parser. (Thanks to wwp).

	* Applied a patch from wwp as a correction to a previous patch of
	his to eliminate a possible memory leak.

2008-02-02 Shlomi Fish <shlomif@iglu.org.il>

	* Tagged and released gringotts-1.2.10pre1.

2008-09-03 Shlomi Fish <shlomif@iglu.org.il>

	* Applied a series of patches by Rorschach to add an optional 
	"minimize-to-tray-icon" feature for gringotts.

	* Tagged and relased gringotts-1.2.10pre2.